syntax = "proto3";

package host;
option java_package = "bot.cline_shengsuan.host.proto";
option java_multiple_files = true;

import "common.proto";

// Provides methods for working with the user's environment.
service EnvService {
  // Writes text to the system clipboard.
  rpc clipboardWriteText(cline_shengsuan.StringRequest) returns (cline_shengsuan.Empty);

  // Reads text from the system clipboard.
  rpc clipboardReadText(cline_shengsuan.EmptyRequest) returns (cline_shengsuan.String);
}
